2004-10-12  James Turner  <james@worldforge.org>

	* Removing long-dead files from the time before pkg-config

2004-10-12  James Turner  <james@worldforge.org>

	* tests/agent.cpp: Use new Atlas-C++ 0.6 'copy' functionality to make LOOK
	  filtering correct.
	  
	* tests/tests.cpp: further improve the appearance and disappearance tests.
	
	* Eris/IGRouter.cpp: handle the case where the servers is not using STAMPs
	  better.
	  
	* Eris/Entity.cpp: cleanup old code for dealing with contents changes

2004-10-09  James Turner  <james@worldforge.org>

	* Eris/Entity.cpp: refactor Entity destructor code to not be 
	  stupid about cleaning up child entities. Test code now runs and completes
	  correctly.

2004-10-09  James Turner  <james@worldforge.org>

	* Eris/Entity.cpp, Eris/View.cpp: change how the View destructor works,
	  to stop asserts on deleting it. Entailed adding a hook method on View
	  so Entities have a way to remove themselves from the View's contents map.

2004-10-09  James Turner  <james@worldforge.org>

	* tests/tests.cpp : add initial tests of entity appearance
	
	* tests/agent.cpp: track per-client entity visiblity, and hence do contents
	  pruning when sending SIGHTs. Generate appearance and disappearance ops
	  whent entity visibility changes.
	
	* tests/stubServer.cpp: refactor the entity definition code, and
	  expand the test world.
	  
	* Eris/TypeInfo.cpp: fix a nasty bug revealled by the Appearance tests:
	  use of statics to store TypeInfoPtrs is inherently unsafe when
	  multiple Connections (and hence type trees) exist.

	* Eris/LogStream.h: fix log-levels of the warning and error streams

2004-10-03  James Turner  <james@worldforge.org>

	* tests/* : change the parent/child relationship of the stub server
	  and test code, so the stub server is now the parent. This makes
	  termination a bit easier to think about (stub server runs until
	  the child process exits)
	  
	* tests/* replaced use of a named pipe for OOB control in the tests,